[package]
  name = "random_rts"
  version = "0.1.0"
  edition = "2021"
  authors = ["GenkyDev <genkyplanky@gmail.com>"]  

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  rand = "^0.8"
  sdl2-sys = "^0.35"  
  stopwatch = "^0.0.7"

[dependencies.sdl2]
  version = "^0.35"
  default-features = false
  features = ["image"]
