[package]
  name = "random_rts"
  version = "0.1.0"
  edition = "2021"
  authors = ["GenkyDev <genkyplanky@gmail.com>"]  

[dependencies]
  rand = "^0.8"
  rand_core = "^0.6"
  sdl2-sys = "^0.35"  
  stopwatch = "^0.0.7"

[dependencies.sdl2]
  version = "^0.35"
  default-features = false
  features = ["image"]
